[Chromium] DRT does not have LayoutTestController.pageSizeAndMarginsInPixels https://bugs.webkit.org/show_bug.cgi?id=49257

Source/WebKit/chromium:

Add the WebFrame::getPageProperty method for Chromium.

Patch by Stephen Chenney <schenney@chromium.org> on 2011-11-11
Reviewed by Darin Fisher.

* public/WebFrame.h:
* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::getPageProperty):
* src/WebFrameImpl.h:

Tools:

Adds the remaining missing layout test functionality for printing.

Patch by Stephen Chenney <schenney@chromium.org> on 2011-11-11
Reviewed by Darin Fisher.

* DumpRenderTree/chromium/LayoutTestController.cpp:
(LayoutTestController::LayoutTestController): Add bindings for new JS methods
(parsePageNumber): Method to parse JS arguments for a page number
(parsePageNumberSizeMargins): Method to parse JS arguments for page size and margins
(LayoutTestController::pageSizeAndMarginsInPixels): Get the page size and margins for a given page.
(LayoutTestController::isPageBoxVisible): get the visibility status for printing
(LayoutTestController::pageProperty): get a specific CSS property when in printing mode
* DumpRenderTree/chromium/LayoutTestController.h: Add declarations for new methods

LayoutTests:

Patch by Stephen Chenney <schenney@chromium.org> on 2011-11-11
Reviewed by Darin Fisher.

* platform/chromium/test_expectations.txt: Removed expected fails for
printing tests that were using missing functionality in LayoutTestController.

Canonical link: https://commits.webkit.org/88598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100040 268f45cc-cd09-0410-ab3c-d52691b4dbfc